crates/djls-project/tests/snapshots/corpus__repos__django-5.2__django__templatetags__cache.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "django.templatetags.cache::tag::cache":
    arg_constraints:
      - Min: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 3
        message:
          PercentFormat:
            template: "'%r' tag requires at least 2 arguments."
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
        - name: arg2
          requirement: required
          kind: Variable
    as_var: keep
filter_arities: {}
block_specs:
  "django.templatetags.cache::tag::cache":
    body_analysis_evidence: not_detected
    end_tag: endcache
    intermediates: []
