crates/djls-project/tests/snapshots/corpus__repos__django-5.2__django__templatetags__i18n.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "django.templatetags.i18n::tag::blocktrans":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - with
        - count
        - context
        - trimmed
        - asvar
      duplicate_rejection: detected
      unknown_rejection: detected
    extracted_args: []
    as_var: keep
  "django.templatetags.i18n::tag::blocktranslate":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - with
        - count
        - context
        - trimmed
        - asvar
      duplicate_rejection: detected
      unknown_rejection: detected
    extracted_args: []
    as_var: keep
  "django.templatetags.i18n::tag::get_available_languages":
    arg_constraints:
      - Exact: 3
    required_keywords:
      - position:
          Forward: 1
        value: as
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: as
        required: true
        kind:
          Literal: as
      - name: arg2
        required: true
        kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::get_current_language":
    arg_constraints:
      - Exact: 3
    required_keywords:
      - position:
          Forward: 1
        value: as
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: as
        required: true
        kind:
          Literal: as
      - name: arg2
        required: true
        kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::get_current_language_bidi":
    arg_constraints:
      - Exact: 3
    required_keywords:
      - position:
          Forward: 1
        value: as
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: as
        required: true
        kind:
          Literal: as
      - name: arg2
        required: true
        kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::get_language_info":
    arg_constraints:
      - Exact: 5
    required_keywords:
      - position:
          Forward: 1
        value: for
      - position:
          Forward: 3
        value: as
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: for
        required: true
        kind:
          Literal: for
      - name: arg2
        required: true
        kind: Variable
      - name: as
        required: true
        kind:
          Literal: as
      - name: arg4
        required: true
        kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::get_language_info_list":
    arg_constraints:
      - Exact: 5
    required_keywords:
      - position:
          Forward: 1
        value: for
      - position:
          Forward: 3
        value: as
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: for
        required: true
        kind:
          Literal: for
      - name: arg2
        required: true
        kind: Variable
      - name: as
        required: true
        kind:
          Literal: as
      - name: arg4
        required: true
        kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::language":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 2
        message:
          PercentFormat:
            template: "'%s' takes one argument (language)"
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::trans":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - noop
        - context
        - as
      duplicate_rejection: detected
      unknown_rejection: detected
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          PercentFormat:
            template: "'%s' takes at least one argument"
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
    as_var: keep
  "django.templatetags.i18n::tag::translate":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - noop
        - context
        - as
      duplicate_rejection: detected
      unknown_rejection: detected
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          PercentFormat:
            template: "'%s' takes at least one argument"
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
    as_var: keep
filter_arities:
  "django.templatetags.i18n::filter::language_bidi": no_argument
  "django.templatetags.i18n::filter::language_name": no_argument
  "django.templatetags.i18n::filter::language_name_local": no_argument
  "django.templatetags.i18n::filter::language_name_translated": no_argument
block_specs:
  "django.templatetags.i18n::tag::blocktrans":
    body_analysis_evidence: not_detected
    end_tag: endblocktrans
    intermediates:
      - plural
  "django.templatetags.i18n::tag::blocktranslate":
    body_analysis_evidence: not_detected
    end_tag: endblocktranslate
    intermediates:
      - plural
  "django.templatetags.i18n::tag::language":
    body_analysis_evidence: not_detected
    end_tag: endlanguage
    intermediates: []
